@@ -11,6 +11,18 @@ this repository contains the full copyright notices and license terms. -->
             <field name="inherit" ref="account_payment.payment_view_form"/>
             <field name="name">payment_form</field>
         </record>
+        <record model="ir.action.act_window.domain" id="account_payment.act_payment_form_domain_failed">
+            <field name="name">Pending Failed</field>
+            <field name="sequence" eval="45"/>
+            <field name="domain" eval="[('state', '=', 'failed'), ('line_reconciled', '=', False)]" pyson="1"/>
+            <field name="act_window" ref="account_payment.act_payment_form"/>
+        </record>
+        <record model="ir.action.act_window.domain" id="act_payment_form_domain_all_failed">
+            <field name="name">All Failed</field>
+            <field name="sequence" eval="50"/>
+            <field name="domain" eval="[('state', '=', 'failed')]" pyson="1"/>
+            <field name="act_window" ref="account_payment.act_payment_form"/>
+        </record>
         <record model="ir.ui.view" id="payment_view_list">
             <field name="model">account.payment</field>
             <field name="inherit" ref="account_payment.payment_view_list"/>
