@@ -1,3 +1,4 @@
+* FEA#6588 Add tab for the reconciled rejected payments
 * OTH#0000 Fix corrupted translation file because of merge
 * FEA#6542 Allow to delete payments groups
 * FEA#6565 Add the 'Failed' state on account payments groups
